# slack_moji

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
